--- a/src/components/05-components/SapphireCare_Patterns/card-image/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/card-image/_index.scss
@@ -1,6 +1,6 @@
 /* CardImage */
 .card-image {
-  background: colors.$sapphire-white;
+  background: $sapphire-white;
   ;
   box-shadow: 0 2px 14px 0 rgba(0, 0, 0, .14);
   overflow: hidden;
