--- a/src/components/05-components/SapphireCare_Patterns/image-background/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/image-background/_index.scss
@@ -1,6 +1,6 @@
 /* Custom Pattern - ImageBackground */
 
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .image-bg {
   min-height: 100px;
@@ -12,10 +12,7 @@
 }
 
 .image-bg-img:after {
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 43, 73, 0)), to(colors.$sapphire-care-blue3));
-  background: -webkit-linear-gradient(top, rgba(0, 43, 73, 0) 0%, colors.$sapphire-care-blue3 100%);
-  background: -o-linear-gradient(top, rgba(0, 43, 73, 0) 0%, colors.$sapphire-care-blue3 100%);
-  background: linear-gradient(180deg, rgba(0, 43, 73, 0) 0%, colors.$sapphire-care-blue3 100%);
+  background: linear-gradient(180deg, $sapphire-care-blue2 0%, $sapphire-care-blue3 100%);
   content: "";
   display: block;
   height: 100%;
@@ -28,7 +25,7 @@
 .image-bg-title {
   bottom: 0;
   bottom: 20px;
-  color: colors.$sapphire-white;
+  color: $sapphire-white;
   font-size: 20px;
   left: 15px;
   position: absolute;
