--- a/src/components/05-components/SapphireCare_Patterns/user-card-with-bottom-actions/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/user-card-with-bottom-actions/_index.scss
@@ -1,8 +1,8 @@
 /*UserCardWithBottomActions*/
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .user-card-bottom-actions-wrapper {
-  background: colors.$sapphire-white;
+  background: $sapphire-white;
   -webkit-box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
