--- a/src/components/02-generic/_reset.scss
+++ b/src/components/02-generic/_reset.scss
@@ -1,10 +1,10 @@
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 
 body,
 .content {
-  background: #F6F6F6;
-  color: colors.$dark-grey;
+  background: $sapphire-white;
+  color: $dark-grey;
   font-family: Lato, Arial;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 
