--- a/src/components/05-components/SapphireCare_Patterns/filter/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/filter/_index.scss
@@ -1,5 +1,5 @@
 /* Action Sheet - Sapphire Filter */
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .sapphire-filter.action-sheet-container {
   -servicestudio-height: auto;
@@ -9,14 +9,14 @@
 }
 
 .sapphire-filter .action-sheet {
-  background-color: colors.$sapphire-white;
+  background-color: $sapphire-white;
   padding: 20px 0 10px;
 
   -servicestudio-position: relative;
 }
 
 .sapphire-filter .action-sheet--title {
-  color: colors.$sapphire-care-blue3;
+  color: $sapphire-care-blue3;
   /*secondary-color*/
   font-size: 20px;
   font-weight: 700;
@@ -24,7 +24,7 @@
 }
 
 .sapphire-filter .action-sheet--closebtn {
-  color: colors.$dark-grey;
+  color: $dark-grey;
   font-size: 24px;
   position: absolute;
   right: 18px;
@@ -37,7 +37,7 @@
 }
 
 .sapphire-filter .action-sheet--closebtn .icon {
-  color: colors.$mid-dark-grey;
+  color: $mid-dark-grey;
   font-size: 24px;
 }
 
