--- a/src/components/05-components/SapphireCare_Patterns/full-page-feedback/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/full-page-feedback/_index.scss
@@ -1,16 +1,16 @@
 /* Custom Pattern - Full page Feedback */
-@use '~Settings/colors'as colors;
+@use '~Settings/colors'as *;
 
 .fullpage-feedback {
-  -servicestudio-background: colors.$regular-alpha;
-  background: colors.$sapphire-white;
+  -servicestudio-background: $regular-alpha;
+  background: $sapphire-white;
   /*primary-color*/
   bottom: 0;
   -webkit-box-direction: normal;
   -webkit-box-orient: vertical;
   -webkit-box-pack: justify;
-  -servicestudio-color: colors.$sapphire-white;
-  color: colors.$dark-grey;
+  -servicestudio-color: $sapphire-white;
+  color: $dark-grey;
   display: -webkit-box;
   display: flex;
   flex-direction: column;
@@ -25,9 +25,9 @@
 }
 
 .fullpage-feedback.bg-colored {
-  background: colors.$regular-alpha;
+  background: $regular-alpha;
   /*primary-color*/
-  color: colors.$sapphire-white;
+  color: $sapphire-white;
 }
 
 
