--- a/src/components/05-components/SapphireCare_Patterns/medical-card/_index.scss
+++ b/src/components/05-components/SapphireCare_Patterns/medical-card/_index.scss
@@ -1,4 +1,4 @@
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 @use '~Tools/background-gradient'as gradient;
 
 .MedicalCard {
@@ -6,7 +6,7 @@
     @include gradient.backgroundGradient;
     border-radius: 10px;
     box-shadow: 0 8px 6px 0 rgba(0, 0, 0, 0.1);
-    color: white;
+    color: $sapphire-white;
     display: flex;
     flex-direction: column;
     font-size: 14px;
@@ -18,21 +18,21 @@
     width: 100%;
 
     &.Requested {
-      background-color: colors.$sapphire-white;
+      background-color: $sapphire-white;
       background-image: none;
-      color: colors.$dark-grey;
+      color: $dark-grey;
 
       .MedicalCard__Title--container {
-        color: colors.$regular-alpha;
+        color: $regular-alpha;
 
         .MedicalCard__Title--subTitle {
-          color: colors.$dark-grey;
+          color: $dark-grey;
         }
 
       }
 
       .MedicalCard__Title--subTitle {
-        color: colors.$mid-light-grey;
+        color: $mid-light-grey;
 
       }
 
@@ -42,7 +42,7 @@
 
       .Photo {
         img {
-          border-color: colors.$mid-light-grey;
+          border-color: $mid-light-grey;
         }
       }
     }
@@ -50,7 +50,7 @@
     &.MainAccount {
       .Photo {
         img {
-          border: 2px solid colors.$regular-alpha;
+          border: 2px solid $regular-alpha;
 
         }
 
@@ -138,7 +138,7 @@
 
     .Photo {
       img {
-        border-color: colors.$mid-light-grey;
+        border-color: $mid-light-grey;
         border-radius: 50%;
         height: 40px;
         width: 40px;
@@ -149,7 +149,7 @@
 
   &__TimeTo {
     align-items: center;
-    background-color: colors.$sapphire-care-red;
+    background-color: $sapphire-care-red;
     border-radius: 10px;
     display: flex;
     height: 24px;
