--- a/src/components/05-components/Silk_Blocks/bottom-bar/_index.scss
+++ b/src/components/05-components/Silk_Blocks/bottom-bar/_index.scss
@@ -1,6 +1,6 @@
 /* Bottom-Bar */
 
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .bottom-bar>a.active .bottom-bar-item-text,
 .bottom-bar>a:active .bottom-bar-item-text,
@@ -10,40 +10,40 @@
 .bottom-bar>a:active .bottom-bar-item-icon,
 .bottom-bar-items>a.active .bottom-bar-item-icon,
 .bottom-bar-items>a:active .bottom-bar-item-icon {
-  color: colors.$regular-alpha;
+  color: $regular-alpha;
   /*primary-color*/
 }
 
 .floating-actions .bottom-bar-item {
-  border-color: colors.$regular-alpha;
+  border-color: $regular-alpha;
   /*primary-color*/
-  color: colors.$regular-alpha;
+  color: $regular-alpha;
   /*primary-color*/
 }
 
 .bottom-bar .floating-actions-items a,
 .bottom-bar .floating-actions-items a:link,
 .bottom-bar .floating-actions-items a:visited {
-  color: colors.$regular-alpha;
+  color: $regular-alpha;
   /*primary-color*/
 }
 
 .bottom-bar>a.active,
 .bottom-bar>a:active {
-  color: colors.$regular-alpha;
+  color: $regular-alpha;
   /*primary-color*/
 }
 
 .search-round {
-  -webkit-box-shadow: inset 0 0 0 3px colors.$sapphire-white;
-  box-shadow: inset 0 0 0 3px colors.$sapphire-white;
+  -webkit-box-shadow: inset 0 0 0 3px $sapphire-white;
+  box-shadow: inset 0 0 0 3px $sapphire-white;
 }
 
 .search-stick-bottom {
-  background-color: colors.$sapphire-white;
+  background-color: $sapphire-white;
 }
 
 .header-right .search-input {
-  background-color: colors.$regular-alpha;
+  background-color: $regular-alpha;
   /*primary-color*/
 }
