--- a/src/components/05-components/Silk_Blocks/notification/_index.scss
+++ b/src/components/05-components/Silk_Blocks/notification/_index.scss
@@ -1,8 +1,8 @@
 /* Notification */
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .notification {
-  background-color: colors.$dark-grey;
+  background-color: $dark-grey;
   font-size: 14px;
   padding: 15px;
 }
