--- a/src/components/05-components/Silk_Blocks/separator/_index.scss
+++ b/src/components/05-components/Silk_Blocks/separator/_index.scss
@@ -1,6 +1,6 @@
 /* Separator */
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .separator {
-  background-color: colors.$light-grey;
+  background-color: $light-grey;
 }
