--- a/src/components/05-components/Silk_Blocks/timeline/_index.scss
+++ b/src/components/05-components/Silk_Blocks/timeline/_index.scss
@@ -1,10 +1,10 @@
 /* Timeline */
 
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .timeline-item.active .timeline-icon-container:empty {
-  background: colors.$sapphire-white;
-  border: 1px solid colors.$regular-alpha;
+  background: $sapphire-white;
+  border: 1px solid $regular-alpha;
   /*primary-color*/
 }
 
@@ -34,7 +34,7 @@
 
 [data-block*="TimelineItem"]:not(:last-child) .timeline-icon-line,
 [data-block*="TimelineItem"] .timeline-icon-line {
-  border-right: 2px solid colors.$regular-alpha;
+  border-right: 2px solid $regular-alpha;
   /*primary-color*/
   bottom: -15px;
   height: auto;
@@ -54,15 +54,15 @@
 
 [data-block*="TimelineItem"] .timeline-item.active .timeline-icon-line {
   background: transparent;
-  border-right: 2px dashed colors.$regular-alpha !important;
+  border-right: 2px dashed $regular-alpha !important;
   /*primary-color*/
   top: -17px;
 }
 
 [data-block*="TimelineItem"]:not(:last-child) .timeline-icon-container:empty,
 [data-block*="TimelineItem"] .timeline-icon-container:empty {
-  -webkit-box-shadow: 0 0 0 6px colors.$sapphire-white;
-  box-shadow: 0 0 0 6px colors.$sapphire-white;
+  -webkit-box-shadow: 0 0 0 6px $sapphire-white;
+  box-shadow: 0 0 0 6px $sapphire-white;
   margin: 5px 11px 0;
   position: relative;
   z-index: 1;
