--- a/src/components/06-helpers/_background.scss
+++ b/src/components/06-helpers/_background.scss
@@ -1,8 +1,8 @@
 /* Background colors */
-@use '~Settings/colors';
+@use '~Settings/colors'as *;
 
 .background-primary-color {
-  background-color: colors.$regular-alpha;
+  background-color: $regular-alpha;
   /*primary-color*/
 }
 
@@ -17,7 +17,7 @@
 .btn.background-red:hover,
 button.button-group-item.background-red,
 button.button-group-item.button-group-selected-item.background-red {
-  background-color: colors.$regular-red;
+  background-color: $regular-red;
 }
 
 .background-dark-red,
@@ -26,7 +26,7 @@ button.button-group-item.button-group-selected-item.background-red {
 .btn.background-dark-red:hover,
 button.button-group-item.background-dark-red,
 button.button-group-item.button-group-selected-item.background-dark-red {
-  background-color: colors.$dark-red;
+  background-color: $dark-red;
 }
 
 .background-light-red,
@@ -35,7 +35,7 @@ button.button-group-item.button-group-selected-item.background-dark-red {
 .btn.background-light-red:hover,
 button.button-group-item.background-light-red,
 button.button-group-item.button-group-selected-item.background-light-red {
-  background-color: colors.$light-red;
+  background-color: $light-red;
 }
 
 .background-violet,
@@ -44,7 +44,7 @@ button.button-group-item.button-group-selected-item.background-light-red {
 .btn.background-violet:hover,
 button.button-group-item.background-violet,
 button.button-group-item.button-group-selected-item.background-violet {
-  background-color: colors.$regular-pink;
+  background-color: $regular-pink;
 }
 
 .background-dark-violet,
@@ -53,7 +53,7 @@ button.button-group-item.button-group-selected-item.background-violet {
 .btn.background-dark-violet:hover,
 button.button-group-item.background-dark-violet,
 button.button-group-item.button-group-selected-item.background-dark-violet {
-  background-color: colors.$dark-pink;
+  background-color: $dark-pink;
 }
 
 .background-light-violet,
@@ -62,7 +62,7 @@ button.button-group-item.button-group-selected-item.background-dark-violet {
 .btn.background-light-violet:hover,
 button.button-group-item.background-light-violet,
 button.button-group-item.button-group-selected-item.background-light-violet {
-  background-color: colors.$light-pink;
+  background-color: $light-pink;
 }
 
 .background-blue,
@@ -71,7 +71,7 @@ button.button-group-item.button-group-selected-item.background-light-violet {
 .btn.background-blue:hover,
 button.button-group-item.background-blue,
 button.button-group-item.button-group-selected-item.background-blue {
-  background-color: colors.$regular-blue;
+  background-color: $regular-blue;
 }
 
 .background-dark-blue,
@@ -80,7 +80,7 @@ button.button-group-item.button-group-selected-item.background-blue {
 .btn.background-dark-blue:hover,
 button.button-group-item.background-dark-blue,
 button.button-group-item.button-group-selected-item.background-dark-blue {
-  background-color: colors.$dark-blue;
+  background-color: $dark-blue;
 }
 
 .background-light-blue,
@@ -89,7 +89,7 @@ button.button-group-item.button-group-selected-item.background-dark-blue {
 .btn.background-light-blue:hover,
 button.button-group-item.background-light-blue,
 button.button-group-item.button-group-selected-item.background-light-blue {
-  background-color: colors.$regular-alpha;
+  background-color: $regular-alpha;
 }
 
 .background-primaryblue,
@@ -98,7 +98,7 @@ button.button-group-item.button-group-selected-item.background-light-blue {
 .btn.background-primaryblue:hover,
 button.button-group-item.background-primaryblue,
 button.button-group-item.button-group-selected-item.background-primaryblue {
-  background-color: colors.$sapphire-care-blue3;
+  background-color: $sapphire-care-blue3;
 }
 
 .background-green,
@@ -107,7 +107,7 @@ button.button-group-item.button-group-selected-item.background-primaryblue {
 .btn.background-green:hover,
 button.button-group-item.background-green,
 button.button-group-item.button-group-selected-item.background-green {
-  background-color: colors.$regular-green;
+  background-color: $regular-green;
 }
 
 .background-dark-green,
@@ -116,7 +116,7 @@ button.button-group-item.button-group-selected-item.background-green {
 .btn.background-dark-green:hover,
 button.button-group-item.background-dark-green,
 button.button-group-item.button-group-selected-item.background-dark-green {
-  background-color: colors.$dark-green;
+  background-color: $dark-green;
 }
 
 .background-light-green,
@@ -125,7 +125,7 @@ button.button-group-item.button-group-selected-item.background-dark-green {
 .btn.background-light-green:hover,
 button.button-group-item.background-light-green,
 button.button-group-item.button-group-selected-item.background-light-green {
-  background-color: colors.$light-green;
+  background-color: $light-green;
 }
 
 .background-orange,
@@ -134,7 +134,7 @@ button.button-group-item.button-group-selected-item.background-light-green {
 .btn.background-orange:hover,
 button.button-group-item.background-orange,
 button.button-group-item.button-group-selected-item.background-orange {
-  background-color: colors.$regular-orange;
+  background-color: $regular-orange;
 }
 
 .background-dark-orange,
@@ -143,7 +143,7 @@ button.button-group-item.button-group-selected-item.background-orange {
 .btn.background-dark-orange:hover,
 button.button-group-item.background-dark-orange,
 button.button-group-item.button-group-selected-item.background-dark-orange {
-  background-color: colors.$dark-orange;
+  background-color: $dark-orange;
 }
 
 .background-light-orange,
@@ -152,7 +152,7 @@ button.button-group-item.button-group-selected-item.background-dark-orange {
 .btn.background-light-orange:hover,
 button.button-group-item.background-light-orange,
 button.button-group-item.button-group-selected-item.background-light-orange {
-  background-color: colors.$light-orange;
+  background-color: $light-orange;
 }
 
 .background-grey,
@@ -161,7 +161,7 @@ button.button-group-item.button-group-selected-item.background-light-orange {
 .btn.background-grey:hover,
 button.button-group-item.background-grey,
 button.button-group-item.button-group-selected-item.background-grey {
-  background-color: colors.$regular-grey;
+  background-color: $regular-grey;
 }
 
 .background-dark-grey,
@@ -170,7 +170,7 @@ button.button-group-item.button-group-selected-item.background-grey {
 .btn.background-dark-grey:hover,
 button.button-group-item.background-dark-grey,
 button.button-group-item.button-group-selected-item.background-dark-grey {
-  background-color: colors.$mid-dark-grey;
+  background-color: $mid-dark-grey;
 }
 
 .background-light-grey,
@@ -179,8 +179,8 @@ button.button-group-item.button-group-selected-item.background-dark-grey {
 .btn.background-light-grey:hover,
 button.button-group-item.background-light-grey,
 button.button-group-item.button-group-selected-item.background-light-grey {
-  background-color: colors.$mid-light-grey;
-  color: colors.$regular-alpha;
+  background-color: $mid-light-grey;
+  color: $regular-alpha;
 }
 
 .background-light-grey2,
@@ -189,8 +189,8 @@ button.button-group-item.button-group-selected-item.background-light-grey {
 .btn.background-light-grey2:hover,
 button.button-group-item.background-light-grey2,
 button.button-group-item.button-group-selected-item.background-light-grey2 {
-  background-color: colors.$light-grey;
-  color: colors.$regular-alpha;
+  background-color: $light-grey;
+  color: $regular-alpha;
 }
 
 .background-light-grey3,
@@ -199,8 +199,8 @@ button.button-group-item.button-group-selected-item.background-light-grey2 {
 .btn.background-light-grey3:hover,
 button.button-group-item.background-light-grey3,
 button.button-group-item.button-group-selected-item.background-light-grey3 {
-  background-color: colors.$sapphire-light;
-  color: colors.$regular-alpha;
+  background-color: $sapphire-light;
+  color: $regular-alpha;
 }
 
 .btn.background-white,
@@ -208,8 +208,8 @@ button.button-group-item.button-group-selected-item.background-light-grey3 {
 .btn.background-white:hover,
 button.button-group-item.background-white,
 button.button-group-item.button-group-selected-item.background-white {
-  background-color: colors.$sapphire-white;
-  color: colors.$regular-alpha;
+  background-color: $sapphire-white;
+  color: $regular-alpha;
 }
 
 .background-black,
@@ -218,9 +218,9 @@ button.button-group-item.button-group-selected-item.background-white {
 .btn.background-black:hover,
 button.button-group-item.background-black,
 button.button-group-item.button-group-selected-item.background-black {
-  background-color: colors.$dark-grey;
+  background-color: $dark-grey;
 }
 
 .background-white {
-  background-color: colors.$sapphire-white;
+  background-color: $sapphire-white;
 }
